Customize LogIn, new Page,

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,10 +1,12 @@
-<ion-header>
+<!-- <ion-header>
   <ion-navbar>
     <ion-title>Home</ion-title>
   </ion-navbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content padding>
+
+	<div class="brand"><img src="../../assets/imgs/skipLogo.svg" alt="" /></div>
 
   <ion-list inset>
 
