Fix Android Support

--- a/src/pages/tm-setup/tm-setup.html
+++ b/src/pages/tm-setup/tm-setup.html
@@ -8,7 +8,9 @@
 		<span class="welcome">Welcome</span>
 		<h1>TasteMeter</h1>
 		<h2 class="small">Tell us about your favorite foods</h2>
+
+
   </div>
-	skip this step
+	<span class="center small" >skip this step</span>
 
 </ion-content>
