Add select your taste

--- a/src/pages/tm-setup/tm-setup.html
+++ b/src/pages/tm-setup/tm-setup.html
@@ -4,13 +4,60 @@
 
 
 
-  <div class="taste-frame" padding>
+	<div class="taste-frame">
 		<span class="welcome">Welcome</span>
 		<h1>TasteMeter</h1>
 		<h2 class="small">Tell us about your favorite foods</h2>
 
+		<ul class="cloud-list">
+			<li>
+				<input type="checkbox" name="checkbox-option" id="checkbox-button-opt-salad" class="hide-checkbox" value="Option 1">
+				<label for="checkbox-button-opt-salad">Salad</label>
+			</li>
+			<li>
+				<input type="checkbox" name="checkbox-option" id="checkbox-button-opt-burger" class="hide-checkbox" value="Option 2">
+				<label for="checkbox-button-opt-burger">Burger</label>
+			</li>
+			<li>
+				<input type="checkbox" name="checkbox-option" id="checkbox-button-opt-vegan" class="hide-checkbox" value="Option 3">
+				<label for="checkbox-button-opt-vegan">Vegan</label>
+			</li>
 
-  </div>
+			<li>
+				<input type="checkbox" name="checkbox-option" id="checkbox-button-opt-pasta" class="hide-checkbox" value="Option 3">
+				<label for="checkbox-button-opt-pasta">Pasta</label>
+			</li>
+
+			<li>
+				<input type="checkbox" name="checkbox-option" id="checkbox-button-opt-pizza" class="hide-checkbox" value="Option 3">
+				<label for="checkbox-button-opt-pizza">Pizza</label>
+			</li>
+
+			<li>
+				<input type="checkbox" name="checkbox-option" id="checkbox-button-opt-lactose-free" class="hide-checkbox" value="Option 3">
+				<label for="checkbox-button-opt-lactose-free">Lactose-Free</label>
+			</li>
+
+			<li>
+				<input type="checkbox" name="checkbox-option" id="checkbox-button-opt-vegetarian" class="hide-checkbox" value="Option 3">
+				<label for="checkbox-button-opt-vegetarian">Vegetarian</label>
+			</li>
+
+			<li>
+				<input type="checkbox" name="checkbox-option" id="checkbox-button-opt-italian" class="hide-checkbox" value="Option 3">
+				<label for="checkbox-button-opt-italian">Italian</label>
+			</li>
+
+			<li>
+				<input type="checkbox" name="checkbox-option" id="checkbox-button-opt-chinese" class="hide-checkbox" value="Option 3">
+				<label for="checkbox-button-opt-chinese">Chinese</label>
+			</li>
+		</ul>
+
+
+		<button type="button" name="button">Next</button>
+
+	</div>
 	<span class="center small" >skip this step</span>
 
 </ion-content>
