Small style fixes

--- a/src/pages/tm-setup/tm-setup.html
+++ b/src/pages/tm-setup/tm-setup.html
@@ -5,7 +5,7 @@
 
 
 	<div class="taste-frame">
-		<span class="welcome">Welcome</span>
+		<span class="welcome">Welcome!</span>
 		<h1>TasteMeter</h1>
 		<h2 class="small">Tell us about your favorite foods</h2>
 
