--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,7 +6,7 @@
 
 <ion-content padding>
 
-	<div class="brand"><img style="display: none" src="../../assets/imgs/skipLogo.svg" alt="" /></div>
+	<div class="brand"><img src="../../assets/imgs/skipLogo.svg" alt="" /></div>
 
   <ion-list inset>
 
