--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,9 +1,10 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
+	<ion-tab [root]="tab10Root" tabTitle="Login" tabIcon="contact"></ion-tab>
 	<!-- <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab> -->
   <ion-tab [root]="tab4Root" tabTitle="TasteMeter" tabIcon="flask"></ion-tab>
 	<ion-tab [root]="tab5Root" tabTitle="SettingUp" tabIcon="sync"></ion-tab>
-	<ion-tab [root]="tab6Root" tabTitle="Suggestions" tabIcon="restaurant"></ion-tab>
+	<ion-tab [root]="tab6Root" tabTitle="Suggestions" tabIcon="barcode"></ion-tab>
 	<ion-tab [root]="tab7Root" tabTitle="Restaurant" tabIcon="pin"></ion-tab>
 </ion-tabs>
