Fix some informations

--- a/src/pages/RestaurantPage/RestaurantPage.html
+++ b/src/pages/RestaurantPage/RestaurantPage.html
@@ -36,5 +36,69 @@
 			</div>
 
 		</ion-item>
+		<ion-item>
+			<div class="product-thumbnail-wrapper">
+				<img src="https://source.unsplash.com/uL73uBFjz7o/70x80" alt="" class="product-thumbnail">
+			</div>
+			<div class="product-meta">
+				<h2 class="product-name">Green Salad</h2>
+				<p class="product-description">Lettuce, Tomatoes, Olive Oil</p>
+				<span class="product-price">$14.90</span>
+			</div>
+			<div class="product-actions">
+				<ion-icon name="add-circle" item-start class="add-cart"></ion-icon>
+				<span class="product-qty">0</span>
+				<ion-icon name="remove-circle" item-start class="remove-cart"></ion-icon>
+			</div>
+
+		</ion-item>
+		<ion-item>
+			<div class="product-thumbnail-wrapper">
+				<img src="https://source.unsplash.com/uL73uBFjz7o/70x80" alt="" class="product-thumbnail">
+			</div>
+			<div class="product-meta">
+				<h2 class="product-name">Green Salad</h2>
+				<p class="product-description">Lettuce, Tomatoes, Olive Oil</p>
+				<span class="product-price">$14.90</span>
+			</div>
+			<div class="product-actions">
+				<ion-icon name="add-circle" item-start class="add-cart"></ion-icon>
+				<span class="product-qty">0</span>
+				<ion-icon name="remove-circle" item-start class="remove-cart"></ion-icon>
+			</div>
+
+		</ion-item>
+		<ion-item>
+			<div class="product-thumbnail-wrapper">
+				<img src="https://source.unsplash.com/uL73uBFjz7o/70x80" alt="" class="product-thumbnail">
+			</div>
+			<div class="product-meta">
+				<h2 class="product-name">Green Salad</h2>
+				<p class="product-description">Lettuce, Tomatoes, Olive Oil</p>
+				<span class="product-price">$14.90</span>
+			</div>
+			<div class="product-actions">
+				<ion-icon name="add-circle" item-start class="add-cart"></ion-icon>
+				<span class="product-qty">0</span>
+				<ion-icon name="remove-circle" item-start class="remove-cart"></ion-icon>
+			</div>
+
+		</ion-item>
+		<ion-item>
+			<div class="product-thumbnail-wrapper">
+				<img src="https://source.unsplash.com/uL73uBFjz7o/70x80" alt="" class="product-thumbnail">
+			</div>
+			<div class="product-meta">
+				<h2 class="product-name">Green Salad</h2>
+				<p class="product-description">Lettuce, Tomatoes, Olive Oil</p>
+				<span class="product-price">$14.90</span>
+			</div>
+			<div class="product-actions">
+				<ion-icon name="add-circle" item-start class="add-cart"></ion-icon>
+				<span class="product-qty">0</span>
+				<ion-icon name="remove-circle" item-start class="remove-cart"></ion-icon>
+			</div>
+
+		</ion-item>
 	</ion-list>
 </ion-content>
