--- a/src/pages/tasteMeter-setting-up/tasteMeterSettingUp.html
+++ b/src/pages/tasteMeter-setting-up/tasteMeterSettingUp.html
@@ -1,6 +1,6 @@
 <ion-content padding>
 	<div class="taste-frame">
-		<h1>TasteMeter</h1>
+		<h1><img src="../../assets/imgs/dish-meter-logo.svg" alt="" class="dish-meter-logo"></h1>
 
 		<div class="settingUp">
 			<h2>Almost Done!</h2>
