fix restaurant pages, add loaders

--- a/src/pages/RestaurantPage/RestaurantPage.html
+++ b/src/pages/RestaurantPage/RestaurantPage.html
@@ -1,18 +1,26 @@
 <ion-content>
 	<div class="restaurant-cover" style="background-image: url('https://source.unsplash.com/LOLSb7m6XkU/600x600');" padding>
 
-		<div class="restaurant-meta">
+		<div class="restaurant-information-wrapper">
 
 			<div class="restaurant-logo">
 				<img src="../../assets/imgs/restaurant-logo.png" alt="">
 			</div>
-			<h1 class="restaurant-title">
-				The Vegan Squad
-			</h1>
 
-			<span class="restaurant-address">
-				3L6, 136 Market Ave, Winnipeg, MB R3B 3N2, Canada
-			</span>
+			<div class="restaurant-meta">
+				<h1 class="restaurant-title">
+					The Vegan Squad
+				</h1>
+
+				<div class="restaurant-distance">
+					<ion-icon name="pin" item-start class="pin icon"></ion-icon>
+					<a href="#" class="tag">View on map</a>
+				</div>
+				<span class="restaurant-address">
+					3L6, 136 Market Ave, Winnipeg, MB R3B 3N2
+				</span>
+			</div>
+
 
 		</div>
 
