--- a/src/pages/tasteMeter-setting-up/tasteMeterSettingUp.html
+++ b/src/pages/tasteMeter-setting-up/tasteMeterSettingUp.html
@@ -3,7 +3,12 @@
 		<h1><img src="../../assets/imgs/dish-meter-logo.svg" alt="" class="dish-meter-logo"></h1>
 
 		<div class="settingUp">
-			<h2>Almost Done!</h2>
+
+
+
+			<h2>
+				<div class="loader" ></div>
+			Almost Done!</h2>
 			<p>We are preparing on your style.</p>
 		</div>
 
