--- a/src/pages/RestaurantPage/RestaurantPage.html
+++ b/src/pages/RestaurantPage/RestaurantPage.html
@@ -1,4 +1,14 @@
 <ion-content>
+
+<div class="taste-modal-wrapper hidden">
+	<div class="taste-modal-close"><ion-icon name="close"></ion-icon></div>
+	<div class="taste-modal taste-modal-full map">
+		<img width="600" src="https://maps.googleapis.com/maps/api/staticmap?center=Winnipeg,+manitoba&zoom=14&scale=2&size=350x600&maptype=roadmap&format=png&visual_refresh=true&markers=size:mid%7Ccolor:0xff0000%7Clabel:%7CWinnipeg,+manitoba" alt="Google Map of Winnipeg, manitoba">
+	</div>
+</div>
+
+
+
 	<div class="restaurant-cover" style="background-image: url('https://source.unsplash.com/LOLSb7m6XkU/600x600');" padding>
 
 		<div class="restaurant-information-wrapper">
