Add Restaurant List Page

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,29 +1,95 @@
 <!-- <ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
+<ion-navbar>
+<ion-title>Home</ion-title>
+</ion-navbar>
 </ion-header> -->
 
 <ion-content padding>
 
-	<div class="brand"><img src="../../assets/imgs/skipLogo.svg" alt="" /></div>
 
-  <ion-list inset>
 
-    <ion-item>
-      <ion-label fixed>Username</ion-label>
-      <ion-input type="text" value=""></ion-input>
-    </ion-item>
+	<ion-list search>
 
-    <ion-item>
-      <ion-label fixed>Password</ion-label>
-      <ion-input type="password"></ion-input>
-    </ion-item>
+		<ion-item>
+			<ion-icon name="search" item-end></ion-icon>
+			<!-- <ion-label fixed>Username</ion-label> -->
+			<ion-input type="text" value="" placeholder="Search"></ion-input>
+		</ion-item>
 
-  </ion-list>
 
-  <div padding>
-    <button block>Sign In</button>
-  </div>
+
+	</ion-list>
+
+	<ion-list venue class="venues">
+
+		<ion-item style="background-image: url('https://source.unsplash.com/LOLSb7m6XkU/600x400');">
+
+			<div class="venue-meta">
+				<h1>Panda Chinese Restaurant</h1>
+
+				<div class="rating">
+					<ion-icon name="star"></ion-icon>
+					<ion-icon name="star"></ion-icon>
+					<ion-icon name="star-half"></ion-icon>
+					<ion-icon name="star-outline"></ion-icon>
+					<ion-icon name="star-outline"></ion-icon>
+				</div>
+
+				<p>
+					<ion-icon name="pin"></ion-icon>
+					3.4km far from you
+				</p>
+			</div>
+
+		</ion-item>
+
+
+		<ion-item style="background-image: url('https://source.unsplash.com/LOLSb7m6XkU/600x400');">
+
+			<div class="venue-meta">
+				<h1>Panda Chinese Restaurant</h1>
+
+				<div class="rating">
+					<ion-icon name="star"></ion-icon>
+					<ion-icon name="star"></ion-icon>
+					<ion-icon name="star-half"></ion-icon>
+					<ion-icon name="star-outline"></ion-icon>
+					<ion-icon name="star-outline"></ion-icon>
+				</div>
+
+				<p>
+					<ion-icon name="pin"></ion-icon>
+					3.4km far from you
+				</p>
+			</div>
+
+		</ion-item>
+
+
+
+		<ion-item style="background-image: url('https://source.unsplash.com/LOLSb7m6XkU/600x400');">
+
+			<div class="venue-meta">
+				<h1>Panda Chinese Restaurant</h1>
+
+				<div class="rating">
+					<ion-icon name="star"></ion-icon>
+					<ion-icon name="star"></ion-icon>
+					<ion-icon name="star-half"></ion-icon>
+					<ion-icon name="star-outline"></ion-icon>
+					<ion-icon name="star-outline"></ion-icon>
+				</div>
+
+				<p>
+					<ion-icon name="pin"></ion-icon>
+					3.4km far from you
+				</p>
+			</div>
+
+		</ion-item>
+
+	</ion-list>
+
+
 
 </ion-content>
