--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,17 +8,8 @@
 
 
 
-	<ion-list search>
-
-		<ion-item>
-			<ion-icon name="search" item-end></ion-icon>
-			<!-- <ion-label fixed>Username</ion-label> -->
-			<ion-input type="text" value="" placeholder="Search"></ion-input>
-		</ion-item>
-
-
-
-	</ion-list>
+	<h1>Hello, {{ userData.name }}!</h1>
+	<h2>These are the restaurants that matches with your taste.</h2>
 
 	<ion-list venue class="venues">
 
